2009-07-02  Thomas Moulard  <thomas.moulard@gmail.com>

	Handle submodule and check for git.
	* bootstrap: Here.

2009-07-02  Thomas Moulard  <thomas.moulard@gmail.com>

	Update build-aux submodule.
	* build-aux: Update submodule.

2009-07-01  Thomas Moulard  <thomas.moulard@gmail.com>

	Use submodules to factorize build-aux, doc and tests.
	* .gitmodules: New.
	* build-aux/acx_pthread.m4: Remove.
	* build-aux/autotest.at: Remove.
	* build-aux/autotest.mk: Remove.
	* build-aux/boost.m4: Remove.
	* build-aux/bootstrap: Remove.
	* build-aux/config.guess: Remove.
	* build-aux/config.sub: Remove.
	* build-aux/deb.mk: Remove.
	* build-aux/depcomp: Remove.
	* build-aux/doxygen.m4: Remove.
	* build-aux/ebuild.mk: Remove.
	* build-aux/init.mk: Remove.
	* build-aux/install-sh: Remove.
	* build-aux/ipopt.m4: Remove.
	* build-aux/libtool.m4: Remove.
	* build-aux/ltmain.sh: Remove.
	* build-aux/ltoptions.m4: Remove.
	* build-aux/ltsugar.m4: Remove.
	* build-aux/ltversion.m4: Remove.
	* build-aux/lt~obsolete.m4: Remove.
	* build-aux/missing: Remove.
	* build-aux/move-if-change: Remove.
	* build-aux/pkg-config.mk: Remove.
	* build-aux/pkg-config.pc.in: Remove.
	* build-aux/roboptim-core.m4: Remove.
	* build-aux/rpm.mk: Remove.
	* build-aux/warning.m4: Remove.
	* build-aux: New.
	* doc/Doxyfile.in: Remove.
	* doc/Makefile.am: Remove.
	* doc/doxygen.css: Remove.
	* doc/footer.html: Remove.
	* doc/header.html: Remove.
	* doc/package.css: Remove.
	* doc/sf-upload.sh.in: Remove.
	* doc/tabs.css: Remove.
	* doc: New.
	* tests/Makefile.am: Add shared-tests to CPPFLAGS and
	fix hs071.hh path.
	* tests/hs071.hh: Remove.
	* tests/shared-tests: New.

2009-06-26  Thomas Moulard  <thomas.moulard@gmail.com>

	Add titles to functions.
	* tests/hs071.hh: Add titles.
	* tests/plugin.stdout,
	* tests/simple.stdout: Regenerate.

2009-06-25  Thomas Moulard  <thomas.moulard@gmail.com>

	Copy constraints final values in result object.
	* src/roboptim-core-ipopt-plugin.cc: Copy constraints final