@@ -22,3 +22,8 @@ roboptim_core_ipopt_plugin_la_LIBADD = $(ROBOPTIMCORE_LIBS)
 roboptim_core_ipopt_plugin_la_LIBADD += $(IPOPT_LIBS)
 
 roboptim_core_ipopt_plugin_la_LDFLAGS = -module -version-info 1:1:0
+
+# Make sure one does not compile a plug-in with test coverage support as
+# it seems to trigger a segv at exit.
+roboptim_core_ipopt_plugin_la_CXXFLAGS = \
+	`echo $(CXXFLAGS) | sed -e 's/-ftest-coverage//' -e 's/-fprofile-arcs//'`
