@@ -1,3 +1,8 @@
+2009-07-27  Thomas Moulard  <thomas.moulard@gmail.com>
+
+	Disable gcov support in plug-in.
+	* src/Makefile.am: Here.
+
 2009-07-02  Thomas Moulard  <thomas.moulard@gmail.com>
 
 	Handle submodule and check for git.
